--- a/test.ipynb
+++ b/test.ipynb
@@ -2,44 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "# Use K-Means to select what samples to save, similar to at_least = 0\n",
-    "def select_data(self, args, encoder, sample_set):\n",
-    "    data_loader = get_data_loader(args, sample_set, shuffle=False, drop_last=False, batch_size=1)\n",
-    "    features = []\n",
-    "    encoder.eval()\n",
-    "    for step, batch_data in enumerate(data_loader):\n",
-    "        labels, tokens, ind = batch_data\n",
-    "        tokens=torch.stack([x.to(args.device) for x in tokens],dim=0)\n",
-    "        with torch.no_grad():\n",
-    "            feature, rp = encoder.bert_forward(tokens)\n",
-    "        features.append(feature.detach().cpu())\n",
-    "\n",
-    "    features = np.concatenate(features)\n",
-    "    num_clusters = min(args.num_protos, len(sample_set))\n",
-    "    distances = KMeans(n_clusters=num_clusters, random_state=0).fit_transform(features)\n",
-    "\n",
-    "    mem_set = []\n",
-    "    current_feat = []\n",
-    "    for k in range(num_clusters):\n",
-    "        sel_index = np.argmin(distances[:, k])\n",
-    "        instance = sample_set[sel_index]\n",
-    "        mem_set.append(instance)\n",
-    "        current_feat.append(features[sel_index])\n",
-    "    \n",
-    "    current_feat = np.stack(current_feat, axis=0)\n",
-    "    current_feat = torch.from_numpy(current_feat)\n",
-    "    return mem_set, current_feat, current_feat.mean(0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,19 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at datasets/bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Config:\n",
     "    def __init__(self):\n",
@@ -163,11 +116,69 @@
     "        self.marker_size = 4\n",
     "        self.feat_dim = 64\n",
     "        self.device = 'cuda'\n",
+    "        self.num_workers = 0\n",
+    "        self.num_protos = 20\n",
+    "        self.seed = 2023\n",
+    "        self.max_length = 256\n",
+    "        self.bert_path = \"datasets/bert-base-uncased\"\n",
+    "        self.dataname = \"FewRel\"\n",
+    "        self.task_name = \"FewRel\"\n",
+    "        self.data_path = \"sample_data/\"\n",
+    "        self.num_of_relation = 80\n",
     "        \n",
     "        \n",
     "args = Config()\n",
     "\n",
     "encoder = Encoder(args=args).to(args.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from dataloaders.my_sampler import data_sampler\n",
+    "from dataloaders.data_loader import get_data_loader\n",
+    "\n",
+    "sampler = data_sampler(args=args, seed=args.seed)\n",
+    "\n",
+    "dataset_id2sample, dataset_rel2sample = next(sampler)\n",
+    "\n",
+    "current_relations = sampler.id2rel\n",
+    "\n",
+    "def select_data(self, args, encoder, sample_set):\n",
+    "    data_loader = get_data_loader(args, sample_set, shuffle=False, drop_last=False, batch_size=1)\n",
+    "    features = []\n",
+    "    encoder.eval()\n",
+    "    for step, batch_data in enumerate(data_loader):\n",
+    "        labels, tokens, ind = batch_data\n",
+    "        tokens=torch.stack([x.to(args.device) for x in tokens],dim=0)\n",
+    "        with torch.no_grad():\n",
+    "            feature, rp = encoder.bert_forward(tokens)\n",
+    "        features.append(feature.detach().cpu())\n",
+    "\n",
+    "    features = np.concatenate(features)\n",
+    "    num_clusters = min(20, len(sample_set))\n",
+    "    distances = KMeans(n_clusters=num_clusters, random_state=0).fit_transform(features)\n",
+    "\n",
+    "    mem_set = []\n",
+    "    current_feat = []\n",
+    "    for k in range(num_clusters):\n",
+    "        sel_index = np.argmin(distances[:, k])\n",
+    "        instance = sample_set[sel_index]\n",
+    "        mem_set.append(instance)\n",
+    "        current_feat.append(features[sel_index])\n",
+    "    \n",
+    "    current_feat = np.stack(current_feat, axis=0)\n",
+    "    current_feat = torch.from_numpy(current_feat)\n",
+    "    return mem_set, current_feat, current_feat.mean(0)\n",
+    "\n",
+    "for relation in current_relations:\n",
+    "    memorized_samples[relation], feat, temp_proto = self.select_data(args, encoder, dataset_rel2sample[relation])\n",
+    "    feat_mem.append(feat)\n",
+    "    proto_mem.append(temp_proto)\n"
    ]
   }
  ],
@@ -187,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
